[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/game_areas/falling_zone.gd" type="Script" id=1]
[ext_resource path="res://src/sound/fx/falling.ogg" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 298.5, 10 )

[node name="FallingZone" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="FallSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_falling_zone_body_entered"]
[connection signal="finished" from="FallSound" to="." method="_on_FallSound_finished"]
